--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^2.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^5.2.1",
+    "google-map-react": "^2.2.0",
     "react": "^16.13.1",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^16.13.1",
+    "react-google-maps": "^9.4.5",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1"
   },
@@ -33,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-error-overlay": "^6.0.9"
   }
 }
